[package]
name = "dysoon_simhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

anyhow = "1.0"
thiserror = "1.0"

async-trait = "0.1.74"
tokio = { version = "1.35", features = ["rt","rt-multi-thread","net","sync","time","macros"] }

eframe = "0.24"

sysinfo = "0.29.11"

hidapi = "2.4.1"
